--- a/WebSharper.BackgroundFetch/WebSharper.BackgroundFetch.fsproj
+++ b/WebSharper.BackgroundFetch/WebSharper.BackgroundFetch.fsproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <BaseOutputPath>bin\Debug\netstandard2.0\</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
